# project-nexus

./: .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  export.ps1
.github/workflows/: rust-ci.yml  rust-format.yml
axiom_core/: Cargo.toml
axiom_core/src/: lib.rs
benches/: cosmic_bench.rs
cosmic_queue/: Cargo.toml
cosmic_queue/src/: lib.rs  ring.rs
examples/: sovereign_demo.rs
latency_monitor/src/: lib.rs
nexus/src/: main.rs
nexus_dashboard/: index.html
sovereign-simulator/: Cargo.toml
sovereign-simulator/src/: chain.rs  lib.rs
sovereign_hive/etheric_oracle/src/: lib.rs
