[workspace]
members = [
    "axiom_core",
    "cosmic_queue",
    "latency_monitor",
    "nexus",
    # "nexus_dashboard",     # currently only has index.html - add Cargo.toml if making it a crate
    # "sovereign_hive",      # has nested structure
    # "contracts/mev_arbitrage",
    # "contracts/nexus_token",
    # "contracts/swarm_agent",
]
resolver = "2"

[workspace.dependencies]
wasmtime = "25.0"
# tokio = { version = "1", features = ["full"] }
# serde = { version = "1.0", features = ["derive"] }
# tracing = "0.1"
# anyhow = "1.0"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/redbrickyarl-web/project-nexus"
