[workspace]
members = [
    "axiom_core",
    "cosmic_queue",
    "latency_monitor",
    "nexus",
    # "contracts/*",  # Temporarily excluded until fully implemented
    # "sovereign-simulator",
]
resolver = "2"

[workspace.dependencies]
wasmtime = "25.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
crossbeam-utils = "0.8"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/redbrickyarl-web/project-nexus"
authors = ["Dalton Rosenberg"]
