[package]
name = "cosmic_queue"
version.workspace = true
edition.workspace = true

[dependencies]
crossbeam-utils = "0.8"
parking_lot = "0.12"
tokio = { version = "1", features = ["full"] }
wasmtime = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
iai = "0.1"

[[bench]]
name = "cosmic_bench"
harness = false